--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ PORT=5000
 
 # CORS (separados por comas)
 CORS_ORIGINS=http://localhost:3000,http://localhost:5000,http://127.0.0.1:5000
+
+# Google Gemini AI
+GEMINI_API_KEY=your-gemini-api-key-here
+GEMINI_MODEL=gemini-pro
+
+# Astrología
+DEFAULT_HOUSE_SYSTEM=P
+INCLUDE_MINOR_ASPECTS=true
