--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ PyJWT>=2.8.0
 
 # Utilidades
 python-dotenv>=1.0.0
+
+# Astrología y cálculos astronómicos
+pyswisseph>=2.10.3.2
+pytz>=2023.3
+
+# IA - Google Gemini
+google-generativeai>=0.3.0
