--- a/vercel.json
+++ b/vercel.json
@@ -7,31 +7,71 @@
       "config": {
         "maxLambdaSize": "50mb"
       }
+    },
+    {
+      "src": "tarot_web.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "tarot_web.js",
+      "use": "@vercel/static"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/index.py"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/index.py"
+      "dest": "/api/index.py"
     },
     {
-      "src": "/(.*\\.(html|js|css|png|jpg|jpeg|gif|svg|ico|json))",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json))",
       "dest": "/$1"
     },
     {
       "src": "/",
       "dest": "/tarot_web.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/tarot_web.html"
     }
   ],
   "env": {
     "FLASK_ENV": "production",
-    "PYTHONPATH": "/var/task"
+    "PYTHONPATH": "/var/task",
+    "PYTHON_VERSION": "3.11"
   },
   "functions": {
     "api/index.py": {
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 30,
+      "runtime": "python3.11"
     }
   },
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ]
 }
