--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,24 @@
-# Configuración de la aplicación Flask
-FLASK_ENV=development
-SECRET_KEY=your-secret-key-here-change-in-production
-JWT_SECRET_KEY=your-jwt-secret-key-here-change-in-production
+# Tarot Místico - Environment Variables Template
+# Copy this file to .env and fill in your values
 
-# Base de datos
+# Required - Application Security
+SECRET_KEY=your-secret-key-here-generate-a-random-string
+JWT_SECRET_KEY=your-jwt-secret-key-here-generate-another-random-string
+
+# Required - AI Service
+GEMINI_API_KEY=your-gemini-api-key-from-google-ai-studio
+
+# Optional - Database (defaults to SQLite if not set)
 DATABASE_URL=sqlite:///tarot.db
+# For PostgreSQL: postgresql://user:password@host:port/database
 
-# Puerto
+# Optional - Application Settings
+FLASK_ENV=production
 PORT=5000
 
-# CORS (separados por comas)
-CORS_ORIGINS=http://localhost:3000,http://localhost:5000,http://127.0.0.1:5000
+# Optional - CORS (comma-separated origins)
+CORS_ORIGINS=http://localhost:3000,http://localhost:5000
 
-# Google Gemini AI (para interpretaciones astrológicas con IA)
-GEMINI_API_KEY=your-gemini-api-key-here
-GEMINI_MODEL=gemini-pro
-
-# Astrología
-DEFAULT_HOUSE_SYSTEM=P
-INCLUDE_MINOR_ASPECTS=true
+# Optional - Feature Flags
+ENABLE_ASTROLOGY=true
+ENABLE_SUBSCRIPTIONS=true
