--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,27 @@
 {
   "version": 2,
+  "name": "tarot-mistico",
   "builds": [
     {
       "src": "api/index.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "50mb"
+        "maxLambdaSize": "50mb",
+        "runtime": "python3.11"
       }
-    },
-    {
-      "src": "public/tarot_web.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "public/tarot_web.js",
-      "use": "@vercel/static"
     }
-  },
-  "redirects": [
+  ],
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/index.py"
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json))",
-      "dest": "/public/$1"
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|json|woff|woff2|ttf|eot))",
+      "dest": "/public/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
     },
     {
       "src": "/",
@@ -40,5 +37,14 @@
     "PYTHONPATH": "/var/task",
     "PYTHON_VERSION": "3.11"
   },
-  "regions": ["iad1"]
+  "functions": {
+    "api/index.py": {
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  },
+  "regions": ["iad1"],
+  "github": {
+    "silent": true
+  }
 }
